# noda

./: Cargo.toml  README.md  deploy_intent.db  deploy_intent.db-shm  deploy_intent.db-wal  flake.nix  result
agent-state-node-1/: state.json
examples/: basic-release.json  create_deployment.json  create_release.json  grub-ab-vm-deployment.json  grub-ab-vm-release.json  nix-build-on-target-deployment.json  nix-build-on-target-release.json  nix-copy-deployment.json  nix-copy-release.json  real-deployment-copy.json  real-deployment.json  real-release-copy.json  real-release.json
examples/nix-native-enrollment/: README.md  node-1.nix
nix/hosts/: ota-vm.nix
nix/modules/: noda-agent.nix  noda-server.nix
noda/: .gitignore  README.md  flake.nix
noda/examples/: basic-release.json  nix-build-on-target-release.json
noda/examples/nix-native-enrollment/: flake.nix  node-1.nix
noda/src/: types.rs
noda/src/agent/: mod.rs  workflow.rs
noda/src/db/: assets.rs
noda/src/executors/: grub_ab.rs  mod.rs  nix_generation.rs  noop.rs  scripted.rs
noda/src/server/: mod.rs
noda/tests/: e2e.rs
src/: main.rs  types.rs
src/agent/: mod.rs  state.rs  validation.rs  workflow.rs
src/api/: error.rs  mod.rs
src/db/: commands.rs  deployments.rs  mod.rs  releases.rs  shared.rs
src/executors/: grub_ab.rs  mock.rs  mod.rs  nix_generation.rs
src/server/: mod.rs
tests/: e2e.rs
